--- a/www/templates/pages/main/index.html
+++ b/www/templates/pages/main/index.html
@@ -1,1 +1,6 @@
-<p>This will be out main page content</p>
+<md-whiteframe class="md-whiteframe-z1" layout layout-align="center center">
+  	  <md-toolbar>
+  	  <div class="md-toolbar-tools">
+  	  </div>
+  	  </md-toolbar>
+</md-whiteframe>
