--- a/www/templates/pages/main/index.html
+++ b/www/templates/pages/main/index.html
@@ -1,6 +1,3 @@
-<md-whiteframe class="md-whiteframe-z1" layout layout-align="center center">
-  	  <md-toolbar>
-  	  <div class="md-toolbar-tools">
-  	  </div>
-  	  </md-toolbar>
-</md-whiteframe>
+<div ng-controller="createProjectCtrl" layout="column">
+
+</div>
