--- a/www/templates/pages/projects/index.html
+++ b/www/templates/pages/projects/index.html
@@ -1,3 +1,5 @@
-<md-whiteframe class="md-whiteframe-z1" layout>
-	<span><p>This is projects page</p></span>
-</md-whiteframe>
+<div ng-controller="projectsCtrl">
+	<md-whiteframe class="md-whiteframe-z1" layout>
+		<span><p>This is projects page</p></span>
+	</md-whiteframe>
+</div>
