--- a/www/templates/pages/estimation/index.html
+++ b/www/templates/pages/estimation/index.html
@@ -1,3 +1,26 @@
+<div ng-controller="estimationCtrl">
 <md-whiteframe class="md-whiteframe-z1" layout>
-	<span><p>This is estimation page</p></span>
+	<span><p>Estimate Project</p>
+		<md-content layout-padding>
+			<form name= "estimationForm">
+				<div layout layout-sm="column">
+					<nd-list>
+						<nd-list-item>
+							<md-input-container flex>
+								<label>Project Name</label>
+								<input ng-model="estimation.project">
+							</md-input-container>
+						</nd-list-item>
+						<nd-list-item>
+							<md-input-container flex>
+								<label>Estimator Name</label>
+								<input ng-model="estimation.estimator">
+							</md-input-container>
+						</nd-list-item>
+					</nd-list>
+				</div>
+			</form>
+		</md-content>
+	</span>
 </md-whiteframe>
+</div>
