--- a/www/templates/pages/projects/index.html
+++ b/www/templates/pages/projects/index.html
@@ -1,19 +1,23 @@
 <div ng-controller="projectsCtrl" layout="row">
-	<md-whiteframe class="md-whiteframe-z1" layout>
+	<!-- <md-whiteframe class="md-whiteframe-z1" layout> -->
 		<span>
-			<h2>This is projects page</h2>
-
+			<md-card>
+				<md-card-content>
+ 					<md-button class="md-raised md-primary" ng-click="createProject()">Create Project</md-button>
+ 					<md-button class="md-fab" ng-click="createProject()">
+            			<md-icon md-svg-src="img/icons/plus.svg"></md-icon>
+        			</md-button>
+				</md-card-content>
+			</md-card>
 <!-- 		<div>
 			{{projects[0].name}}
 		</div>
  -->
-
-			<nd-list>
-				<md-list-item ng-repeat="project in projects" ng-click="dsgdf()">
-					{{project.name}}
-
-				</md-list-item>
-			</nd-list>
+			<md-card ng-repeat="project in projects">
+				<md-card-content ng-click="dsgdf()">
+					<h3>{{project.name}}</h3> <p>{{project.description}}</p>
+				</md-card-content>
+			</md-card>
 		</span>
-	</md-whiteframe>
+	<!-- </md-whiteframe> -->
 </div>
