--- a/www/templates/pages/projects/index.html
+++ b/www/templates/pages/projects/index.html
@@ -4,20 +4,38 @@
 			<md-card>
 				<md-card-content>
  					<md-button class="md-raised md-primary" ng-click="createProject()">Create Project</md-button>
- 					<md-button class="md-fab" ng-click="createProject()">
+ 					<md-button class="md-fab" aria-label="Go to project page" ng-click="createProject()">
             			<md-icon md-svg-src="img/icons/plus.svg"></md-icon>
         			</md-button>
 				</md-card-content>
 			</md-card>
-<!-- 		<div>
-			{{projects[0].name}}
-		</div>
- -->
+
 			<md-card ng-repeat="project in projects">
-				<md-card-content ng-click="dsgdf()">
+				<md-card-content ng-click="">
 					<h3>{{project.name}}</h3> <p>{{project.description}}</p>
 				</md-card-content>
+				
+				<md-fab-toolbar md-open="false" count="0" class="ng-isolate-scope md-fab-toolbar md-right">
+	    			<md-fab-trigger class="align-with-text">
+	      				<md-button aria-label="menu" class="md-fab md-primary">
+	        				<md-icon md-svg-src="img/icons/menu.svg"></md-icon>
+	      				</md-button>
+	    			</md-fab-trigger>
+	    			<md-toolbar>
+	      				<md-fab-actions class="md-toolbar-tools">
+	        				<md-button aria-label="comment" class="md-icon-button">
+	          					<md-icon md-svg-src="img/icons/home.svg"></md-icon>
+	        				</md-button>
+	        				<md-button aria-label="label" class="md-icon-button">
+	          					<md-icon md-svg-src="img/icons/home.svg"></md-icon>
+	        				</md-button>
+	        				<md-button aria-label="photo" class="md-icon-button">
+	          					<md-icon md-svg-src="img/icons/home.svg"></md-icon>
+	        				</md-button>
+	      				</md-fab-actions>
+	    			</md-toolbar>
+	  			</md-fab-toolbar>
+				
 			</md-card>
 		</span>
-	<!-- </md-whiteframe> -->
 </div>
