--- a/www/templates/pages/project/project.html
+++ b/www/templates/pages/project/project.html
@@ -1,5 +1,5 @@
 <div ng-controller="porjectCtrl">
 	<h1>This is where we would like the project to show up</h1>
-	{{project.heading}}
+	{{project.name}}
 	{{project.description}}
 </div>
