--- a/www/templates/pages/project/project.html
+++ b/www/templates/pages/project/project.html
@@ -1,5 +1,9 @@
-<div ng-controller="porjectCtrl">
-	<h1>This is where we would like the project to show up</h1>
-	{{project.name}}
-	{{project.description}}
+<div ng-controller="porjectCtrl" layout="column">
+	<md-whiteframe class="md-whiteframe-z1">
+	  	<br/>
+ 		<md-content layout-padding class="autoScroll">
+	  		<h1>{{project.name}}</h1>
+	  		<p>{{project.description}}</p>
+	  	</md-content>
+	</md-whiteframe>
 </div>
