--- a/www/templates/pages/project/project.html
+++ b/www/templates/pages/project/project.html
@@ -4,10 +4,21 @@
  		<md-content layout-padding class="autoScroll">
 	  		<h1>{{project.name}}</h1>
 	  		<p>{{project.description}}</p>
-	  		<div ng-repeat = "child in project.children">
-	  			<h2>->{{child.name}}</h1>
-	  			<p>--->{{child.description}}</p>
-	  		</div>
+
+			<script type="text/ng-template"  id="tree_item_renderer.html">
+			    {{data.name}}
+			    <button ng-click="add(data)">Add node</button>
+			    <button ng-click="delete(data)" ng-show="data.nodes.length > 0">Delete nodes</button>
+			    <ul>
+			        <li ng-repeat="data in data.nodes" ng-include="'tree_item_renderer.html'"></li>
+			    </ul>
+			</script>
+
+			<ul ng-app="Application" ng-controller="TreeController">
+			    <li ng-repeat="data in tree" ng-include="'tree_item_renderer.html'"></li>
+			</ul>
+
+
 	  	</md-content>
 	</md-whiteframe>
 </div>
