--- a/www/templates/pages/project/project.html
+++ b/www/templates/pages/project/project.html
@@ -6,19 +6,24 @@
 	  		<p>{{project.description}}</p>
 
 			<script type="text/ng-template"  id="tree_item_renderer.html">
-			    {{data.name}}
-			    <button ng-click="add(data)">Add node</button>
-			    <button ng-click="delete(data)" ng-show="data.nodes.length > 0">Delete nodes</button>
-			    <ul>
-			        <li ng-repeat="data in data.nodes" ng-include="'tree_item_renderer.html'"></li>
-			    </ul>
+				<div layout = "row">
+			   		<md-input-container>
+				      <input ng-model="data.name">
+				    </md-input-container>
+				    <md-button ng-click="add(data)">Add node</md-button>
+				    <md-button ng-click="delete(data)" ng-show="data.nodes.length > 0">Delete nodes</md-button>
+			    </div>
+			    <md-list layout = "column">
+			    	<md-list-item class="md-3-line" ng-repeat="data in data.nodes" ng-include="'tree_item_renderer.html'" layout = "column">
+			        </md-list-item>
+			    </md-list>
 			</script>
-
-			<ul ng-app="Application" ng-controller="TreeController">
-			    <li ng-repeat="data in tree" ng-include="'tree_item_renderer.html'"></li>
-			</ul>
-
-
+			<div>
+				<md-list ng-app="Application" ng-controller="TreeController">
+					<md-list-item ng-repeat="data in tree" ng-include="'tree_item_renderer.html'" layout="column" layout-align="center start">
+			    	</md-list-item>
+				</md-list>
+			</div>
 	  	</md-content>
 	</md-whiteframe>
 </div>
