Preliminary commit to rebase of new master

--- a/www/templates/pages/login/index.html
+++ b/www/templates/pages/login/index.html
@@ -14,12 +14,18 @@
 				<md-input-container d-no-float>
 					<!-- Use floating label instead of placeholder -->
 					<label>Username</label>
-					<input ng-model="username" type="text" >
+					<input required ng-model="username" type="text" >
+					<div ng-messages="projectForm.description.$error">
+        				<div ng-message="required">This is required.</div>
+        			</div>
 				</md-input-container>
 				<md-input-container d-no-float>
 					<!-- Use floating label instead of placeholder -->
 					<label>Password</label>
-					<input ng-model="password" type="text" >
+					<input required ng-model="password" type="text" >
+					<div ng-messages="projectForm.description.$error">
+        				<div ng-message="required">This is required.</div>
+        			</div>
 				</md-input-container>
 			</div>
 		</md-dialog-content>
