Updated Project List Front-end

--- a/www/templates/pages/projects/index.html
+++ b/www/templates/pages/projects/index.html
@@ -1,27 +1,18 @@
 <div ng-controller="projectsCtrl" layout="row">
 	<!-- <md-whiteframe class="md-whiteframe-z1" layout> -->
-		<span>
-			<md-card>
-				<md-card-content>
- 					<md-button class="md-raised md-primary" ng-click="createProject()">Create Project</md-button>
- 					<md-button class="md-fab" aria-label="Go to project page" ng-click="createProject()">
-            			<md-icon md-svg-src="img/icons/plus.svg"></md-icon>
-        			</md-button>
-				</md-card-content>
-			</md-card>
-
-			<md-card ng-repeat="project in projects">
-				<md-card-content ng-click="">
-					<h3>{{project.name}}</h3> <p>{{project.description}}</p>
-				</md-card-content>
-				
-				<md-fab-toolbar md-open="false" count="0" class="ng-isolate-scope md-fab-toolbar md-right">
+	<span>
+		<md-card ng-repeat="project in projects">
+			<md-card-content class="md-padding">
+				<h3>{{project.name}}</h3> <p>{{project.description}}</p>
+			</md-card-content>
+			<md-fab-toolbar md-open="false" count="0" class="md-fab-toolbar md-right">
+				<div class="md-fab-toolbar-wrapper" >
 	    			<md-fab-trigger class="align-with-text">
-	      				<md-button aria-label="menu" class="md-fab md-primary">
+	      				<md-button aria-label="Project Menu" class="md-fab md-primary">
 	        				<md-icon md-svg-src="img/icons/menu.svg"></md-icon>
 	      				</md-button>
 	    			</md-fab-trigger>
-	    			<md-toolbar>
+	    			<md-toolbar class="ng-scope">
 	      				<md-fab-actions class="md-toolbar-tools">
 	        				<md-button aria-label="comment" class="md-icon-button">
 	          					<md-icon md-svg-src="img/icons/home.svg"></md-icon>
@@ -34,8 +25,8 @@
 	        				</md-button>
 	      				</md-fab-actions>
 	    			</md-toolbar>
-	  			</md-fab-toolbar>
-				
-			</md-card>
-		</span>
+    			</div>
+  			</md-fab-toolbar>
+		</md-card>
+	</span>
 </div>
