--- a/www/templates/pages/estimation/index.html
+++ b/www/templates/pages/estimation/index.html
@@ -1,14 +1,15 @@
 
 
 <div ng-controller="estimationCtrl as ctrl" layout="column">
-  <md-content class="md-padding" layout="column">
-        <md-input-container flex>
-          <label>First name</label>
-          <input ng-model="ctrl.name">
-        </md-input-container>
-    <br/>
-    <h2 class="md-title">Estimators</h2>
-    <md-chips ng-model="ctrl.estimatorNames"></md-chips>
-  </md-content>
+	<md-content class="md-padding" layout="column">
+			<div layout="row">
+				<md-select placeholder="Project" ng-model="ctrl.projectName">
+					<md-option ng-repeat="p in ctrl.projects" value="{{p.project}}">{{p.project}}</md-option>
+				</md-select>
+			</div>
+		<br/>
+		<h2 class="md-title">Estimators</h2>
+		<md-chips ng-model="ctrl.estimatorNames"></md-chips>
+	</md-content>
 </div>
 
