Login seems to be working

--- a/www/templates/pages/login/index.html
+++ b/www/templates/pages/login/index.html
@@ -30,7 +30,7 @@
 			</div>
 		</md-dialog-content>
 		<div class="md-actions" layout="row">
-			<md-button ng-click="login()" class="md-primary">
+			<md-button ng-click="logIn(username, password)" class="md-primary">
 				Login
 			</md-button>
 		</div>
