--- a/www/templates/pages/projects/index.html
+++ b/www/templates/pages/projects/index.html
@@ -5,8 +5,8 @@
 			<md-card-content class="md-padding"> 
 				<h3>{{project.name}}</h3> <p>{{project.description}}</p>
 			</md-card-content>
-			<md-fab-toolbar md-open="false" count="0" class="md-fab-toolbar md-right">
-				<div class="md-fab-toolbar-wrapper" >
+			<md-fab-toolbar md-open="false" count="0" class="md-fab-toolbar md-right" style="height: 4.8rem">
+				<div class="md-fab-toolbar-wrapper" style="height: 4.8rem">
 	    			<md-fab-trigger class="align-with-text">
 	      				<md-button aria-label="Project Menu" class="md-fab md-primary">
 	        				<md-icon md-svg-src="img/icons/menu.svg"></md-icon>
