--- a/www/templates/pages/project/project.html
+++ b/www/templates/pages/project/project.html
@@ -1,21 +1,24 @@
 <div ng-controller="porjectCtrl" layout="column">
-	<md-whiteframe class="md-whiteframe-z1">
+	<md-card>
 	  	<br/>
  		<md-content layout-padding class="autoScroll">
 	  		<h1>{{project.name}}</h1>
 	  		<p>{{project.description}}</p>
-
 			<script type="text/ng-template"  id="tree_item_renderer.html">
 				<md-container layout = "row">
-			   		<md-input-container>
-			   			<label>Node name</label>
+					<md-button class="md-icon-button" aria-label="More" ng-click="add(data)">
+				        <md-icon md-svg-icon="img/icons/add.svg" ></md-icon>
+				    </md-button>
+			   		<md-input-container flex>
+			   		<label>Name</label>
 				      <input ng-model="data.name">
 				    </md-input-container>
-					<md-button class="md-icon-button" aria-label="More" ng-click="add(data)">
-				        <md-icon md-svg-icon="img/icons/plus.svg" ></md-icon>
-				    </md-button>
-				    <md-button class="md-icon-button" aria-label="More" ng-show="data.nodes.length > 0" ng-click="delete(data)" >
-				        <md-icon md-svg-icon="img/icons/minus.svg"></md-icon>
+				    <md-input-container flex = "10">
+			   		<label>Qty</label>
+				      <input ng-model="$scpoe.number">
+				    </md-input-container>
+				    <md-button class="md-icon-button" aria-label="More" ng-click="delete(data)" >
+				        <md-icon md-svg-icon="img/icons/close.svg"></md-icon>
 				    </md-button>
 			    </md-container>
 			    <md-list layout = "column">
@@ -30,5 +33,5 @@
 				</md-list>
 			</div>
 	  	</md-content>
-	</md-whiteframe>
+	</md-card>
 </div>
