--- a/www/templates/pages/project/project.html
+++ b/www/templates/pages/project/project.html
@@ -1,12 +1,21 @@
 <div ng-controller="porjectCtrl" layout="column">
 	<md-card>
+			<md-toolbar>
+			    <div class="md-toolbar-tools">
+			      <h2>{{project.name}}</h2>
+			    </div>
+			  </md-toolbar>
 	  	<br/>
  		<md-content layout-padding class="autoScroll">
-	  		<h1>{{project.name}}</h1>
+ 			<label>Project description</label>
 	  		<p>{{project.description}}</p>
+	  		<md-divider ng-if="!$last"></md-divider>
 			<script type="text/ng-template"  id="tree_item_renderer.html">
 				<md-container layout = "row">
 					<md-button class="md-icon-button" aria-label="More" ng-click="add(data)">
+				        <md-tooltip>
+				          Add Node
+				        </md-tooltip>
 				        <md-icon md-svg-icon="img/icons/add.svg" ></md-icon>
 				    </md-button>
 			   		<md-input-container flex>
@@ -14,10 +23,13 @@
 				      <input ng-model="data.name">
 				    </md-input-container>
 				    <md-input-container flex = "10">
-			   		<label>Qty</label>
-				      <input ng-model="$scpoe.number">
+			   			<label>Qty</label>
+				      	<input ng-model="$scpoe.number">
 				    </md-input-container>
 				    <md-button class="md-icon-button" aria-label="More" ng-click="delete(data)" >
+				   		<md-tooltip>
+				          Remove Node
+				        </md-tooltip>
 				        <md-icon md-svg-icon="img/icons/close.svg"></md-icon>
 				    </md-button>
 			    </md-container>
