--- a/www/templates/pages/login/index.html
+++ b/www/templates/pages/login/index.html
@@ -4,12 +4,12 @@
 			<div class="md-toolbar-tools">
 				<h2>Login</h2>
 				<span flex></span>
-				<md-button class="md-icon-button" ng-click="answer('not applicable')">
+				<md-button class="md-icon-button" ng-click="cancel()">
 					<md-icon md-svg-src="img/icons/close.svg" aria-label="Close dialog"></md-icon>
 				</md-button>
 			</div>
 		</md-toolbar>
-		<md-dialog-content>
+		<md-dialog-content ng-hide="isLogged()">
 			<div>
 				<md-input-container d-no-float>
 					<!-- Use floating label instead of placeholder -->
@@ -28,6 +28,9 @@
         			</div>
 				</md-input-container>
 			</div>
+		</md-dialog-content>
+		<md-dialog-content ng-show="isLogged()">
+			<p>Already Logged In</p>
 		</md-dialog-content>
 		<div class="md-actions" layout="row">
 			<md-button ng-click="logIn(username, password)" class="md-primary">
