--- a/www/templates/pages/estimation/index.html
+++ b/www/templates/pages/estimation/index.html
@@ -3,12 +3,13 @@
 		<md-content class="md-padding" layout="column">
 				<div layout="row">
 					<md-select placeholder="Project" ng-model="ctrl.projectName">
-						<md-option ng-repeat="p in ctrl.projects" value="{{p.project}}">{{p.project}}</md-option>
+						<md-option ng-repeat="p in ctrl.projects" value="{{p}}">{{p}}</md-option>
 					</md-select>
 				</div>
 			<br/>
 			<h2 class="md-title">Estimators</h2>
 			<md-chips ng-model="ctrl.estimatorNames"></md-chips>
 		</md-content>
+		<p ng-if="ctrl.projectName">You picked {{ctrl.projectName.toLowerCase()}}.</p>
 	</div>
 </md-whiteframe>
