we cn now save the tree by using a button. Rather than continously saving huge ammounts of data

--- a/www/templates/pages/main/index.html
+++ b/www/templates/pages/main/index.html
@@ -9,7 +9,7 @@
       <!--<img ng-src="../../../img/Swarm.gif" height="540" width="960" class="md-card-image" alt="Washed Out">-->
       <video controls autoplay width="100%">
         <source src="../../../img/Swarm.avi" type="video/avi" >
-        Your browser does not support HTML5 video.
+        <img src="../../../img/Swarm.png" height="540" width="960">
       </video>
       <md-card-content>
         <h2 class="md-title">Estimate Swarm</h2>
