--- a/www/templates/pages/project/project.html
+++ b/www/templates/pages/project/project.html
@@ -45,5 +45,10 @@
 				</md-list>
 			</div>
 	  	</md-content>
+	  	<md-content label="row">
+		  	<md-button class = "md-primary md-raised" ng-click = "saveProject()">
+		  		Save Tree
+		  	</md-button>
+	  	</md-content>
 	</md-card>
 </div>
