--- a/www/templates/pages/estimation/index.html
+++ b/www/templates/pages/estimation/index.html
@@ -8,8 +8,7 @@
 				</div>
 			<br/>
 			<h2 class="md-title">Estimators</h2>
-			<md-chips ng-model="ctrl.estimatorNames"></md-chips>
+			<md-chips ng-model="ctrl.people"></md-chips>
 		</md-content>
-		<p ng-if="ctrl.projectName">You picked {{ctrl.projectName.toLowerCase()}}.</p>
 	</div>
 </md-whiteframe>
