Modified angular-material.css to solve Toolbar height issue

--- a/www/templates/pages/projects/index.html
+++ b/www/templates/pages/projects/index.html
@@ -6,25 +6,27 @@
 				<h3>{{project.name}}</h3> <p>{{project.description}}</p>
 			</md-card-content>
 			<md-fab-toolbar md-open="false" count="0" class="md-fab-toolbar md-right" style="height: 4.8rem">
-				<div class="md-fab-toolbar-wrapper" style="height: 4.8rem">
-	    			<md-fab-trigger class="align-with-text">
-	      				<md-button aria-label="Project Menu" class="md-fab md-primary">
-	        				<md-icon md-svg-src="img/icons/menu.svg"></md-icon>
-	      				</md-button>
-	    			</md-fab-trigger>
-	    			<md-toolbar class="ng-scope">
-	      				<md-fab-actions class="md-toolbar-tools">
-	        				<md-button aria-label="comment" class="md-icon-button">
-	          					<md-icon md-svg-src="img/icons/home.svg"></md-icon>
-	        				</md-button>
-	        				<md-button aria-label="label" class="md-icon-button">
-	          					<md-icon md-svg-src="img/icons/home.svg"></md-icon>
-	        				</md-button>
-	        				<md-button aria-label="photo" class="md-icon-button">
-	          					<md-icon md-svg-src="img/icons/home.svg"></md-icon>
-	        				</md-button>
-	      				</md-fab-actions>
-	    			</md-toolbar>
+				<div class="md-fab-toolbar-wrapper">
+					<div class="md-fab-toolbar-content">
+		    			<md-fab-trigger class="align-with-text ng-scope">
+		      				<md-button aria-label="Project Menu" class="md-fab md-primary">
+		        				<md-icon md-svg-src="img/icons/menu.svg"></md-icon>
+		      				</md-button>
+		    			</md-fab-trigger>
+		    			<md-toolbar class="ng-scope md-default-theme">
+		      				<md-fab-actions class="md-toolbar-tools">
+		        				<md-button aria-label="comment" class="md-icon-button">
+		          					<md-icon md-svg-src="img/icons/home.svg"></md-icon>
+		        				</md-button>
+		        				<md-button aria-label="label" class="md-icon-button">
+		          					<md-icon md-svg-src="img/icons/home.svg"></md-icon>
+		        				</md-button>
+		        				<md-button aria-label="photo" class="md-icon-button">
+		          					<md-icon md-svg-src="img/icons/home.svg"></md-icon>
+		        				</md-button>
+		      				</md-fab-actions>
+		    			</md-toolbar>
+		    		</div>
     			</div>
   			</md-fab-toolbar>
 		</md-card>
