--- a/www/templates/pages/project/project.html
+++ b/www/templates/pages/project/project.html
@@ -14,52 +14,44 @@
 
 	    <div ui-tree>
 	    <!-- Nested node template -->
-<script type="text/ng-template" id="nodes_renderer.html">
-  <div ui-tree-handle class="tree-node tree-node-content">
-    <a class="btn btn-success btn-xs" ng-if="node.nodes && node.nodes.length > 0" data-nodrag ng-click="toggle(this)"><span
-        class="glyphicon"
-        ng-class="{
-          'glyphicon-chevron-right': collapsed,
-          'glyphicon-chevron-down': !collapsed
-        }"></span></a>
-    {{node.title}}
-    <a class="pull-right btn btn-danger btn-xs" data-nodrag ng-click="remove(this)"><span
-        class="glyphicon glyphicon-remove"></span></a>
-    <a class="pull-right btn btn-primary btn-xs" data-nodrag ng-click="newSubItem(this)" style="margin-right: 8px;"><span
-        class="glyphicon glyphicon-plus"></span></a>
-  </div>
-  <ol ui-tree-nodes="" ng-model="node.nodes" ng-class="{hidden: collapsed}">
-    <li ng-repeat="node in node.nodes" ui-tree-node ng-include="'nodes_renderer.html'">
-    </li>
-  </ol>
-</script>
-
-<div class="row">
-  <div class="col-sm-12">
-    <h3>Basic Example</h3>
-  </div>
-</div>
-
-<div class="row">
-  <div class="col-sm-6">
-    <div ui-tree id="tree-root">
-      <ol ui-tree-nodes ng-model="data">
-        <li ng-repeat="node in data" ui-tree-node ng-include="'nodes_renderer.html'"></li>
-      </ol>
-    </div>
-  </div>
-
-  <div class="col-sm-6">
-    <div class="info">
-      {{info}}
-    </div>
-    <pre class="code">{{ data | json }}</pre>
-  </div>
-</div>
-
-
-
-
+		<script type="text/ng-template" id="nodes_renderer.html">
+		  <div ui-tree-handle class="tree-node tree-node-content" layout = "row">
+		    <a class="btn btn-success btn-xs" ng-if="node.nodes && node.nodes.length > 0" data-nodrag ng-click="toggle(this)" ><span
+		        class="glyphicon"
+		        ng-class="{
+		          'glyphicon-chevron-right': collapsed,
+		          'glyphicon-chevron-down': !collapsed
+		        }"></span></a>
+		    <md-input-container flex>
+			  <label>Name</label>
+			  <input ng-model="node.title">
+			</md-input-container>
+			<md-input-container flex ="10">
+			  <label>Qty</label>
+			  <input ng-model="node.qty">
+			</md-input-container>
+		    <md-button class="md-icon-button" aria-label="Use Android" data-nodrag ng-click="remove(this)" >
+          		<md-icon md-svg-src="../../../img/icons/close.svg"></md-icon>
+        	</md-button>
+		    <md-button class="md-icon-button" aria-label="Use Android" data-nodrag ng-click="newSubItem(this)" >
+          		<md-icon  md-svg-src="../../../img/icons/add.svg"></md-icon>
+        	</md-button>
+		  </div>
+		  <ol ui-tree-nodes="" ng-model="node.nodes" ng-class="{hidden: collapsed}">
+		    <li ng-repeat="node in node.nodes" ui-tree-node ng-include="'nodes_renderer.html'">
+		    </li>
+		  </ol>
+		</script>
+		<div>
+		  <div>
+		    <div ui-tree id="tree-root">
+		      <ol ui-tree-nodes ng-model="project.children">
+		        <li ng-repeat="node in project.children" ui-tree-node ng-include="'nodes_renderer.html'"></li>
+		      </ol>
+		    </div>
+		  </div>
+		</div>
+		<!-- Nested node template -->
 		<md-content label="row">
 	  	<md-button class = "md-primary md-raised" ng-click = "saveProject()">
 	  		Save Tree
