we can now make the input container smaller

--- a/www/templates/pages/project/project.html
+++ b/www/templates/pages/project/project.html
@@ -23,7 +23,7 @@
 		          'glyphicon-chevron-down': !collapsed
 		        }"></span></a>
 		    <md-input-container flex>
-			  <label>Name</label>
+			  <label>Title</label>
 			  <input ng-model="node.title">
 			</md-input-container>
 			<md-input-container flex ="10">
