--- a/www/templates/pages/projects/index.html
+++ b/www/templates/pages/projects/index.html
@@ -15,8 +15,8 @@
 		    			</md-fab-trigger>
 		    			<md-toolbar class="ng-scope md-default-theme">
 		      				<md-fab-actions class="md-toolbar-tools">
-		        				<md-button aria-label="comment" class="md-icon-button">
-		          					<md-icon md-svg-src="img/icons/close.svg" ng-click="deleteProject(project)"></md-icon>
+		        				<md-button aria-label="comment" ng-click="deleteProject(project,$events)" class="md-icon-button">
+		          					<md-icon md-svg-src="img/icons/close.svg"></md-icon>
 		        				</md-button>
 		        				<md-button aria-label="label" class="md-icon-button">
 		          					<md-icon md-svg-src="img/icons/home.svg"></md-icon>
