--- a/www/templates/pages/projects/index.html
+++ b/www/templates/pages/projects/index.html
@@ -15,7 +15,7 @@
 		    			</md-fab-trigger>
 		    			<md-toolbar class="ng-scope md-default-theme">
 		      				<md-fab-actions class="md-toolbar-tools">
-		        				<md-button aria-label="comment" ng-click="deleteProject(project,$events)" class="md-icon-button">
+		        				<md-button aria-label="comment" ng-click="deleteProject(project)" class="md-icon-button">
 		          					<md-icon md-svg-src="img/icons/close.svg"></md-icon>
 		        				</md-button>
 		        				<md-button aria-label="label" class="md-icon-button">
