small sneaky error

--- a/www/templates/pages/project/project.html
+++ b/www/templates/pages/project/project.html
@@ -22,11 +22,11 @@
 		          'glyphicon-chevron-right': collapsed,
 		          'glyphicon-chevron-down': !collapsed
 		        }"></span></a>
-		    <md-input-container flex>
+		    <md-input-container class = "treeInput" flex>
 			  <label>Title</label>
 			  <input ng-model="node.title">
 			</md-input-container>
-			<md-input-container flex ="10">
+			<md-input-container class = "treeInput" flex ="10">
 			  <label>Qty</label>
 			  <input ng-model="node.qty">
 			</md-input-container>
