--- a/www/templates/pages/projects/index.html
+++ b/www/templates/pages/projects/index.html
@@ -15,11 +15,17 @@
 		    			</md-fab-trigger>
 		    			<md-toolbar class="ng-scope md-default-theme">
 		      				<md-fab-actions class="md-toolbar-tools">
-		        				<md-button aria-label="comment" class="md-icon-button">
+		        				<md-button aria-label="Delete" class="md-icon-button">
+		        					<md-tooltip>
+		        						Delete
+		        					</md-tooltip>
 		          					<md-icon md-svg-src="img/icons/close.svg" ng-click="deleteProject(project)"></md-icon>
 		        				</md-button>
-		        				<md-button aria-label="label" class="md-icon-button">
-		          					<md-icon md-svg-src="img/icons/home.svg"></md-icon>
+		        				<md-button aria-label="View/Edit" class="md-icon-button" ng-click="goTo('/project/' + project.name)">
+		        					<md-tooltip>
+		        						View/Edit
+		        					</md-tooltip>
+		          					<md-icon md-svg-src="img/icons/.svg"></md-icon>
 		        				</md-button>
 		        				<md-button aria-label="photo" class="md-icon-button">
 		          					<md-icon md-svg-src="img/icons/home.svg"></md-icon>
