--- a/www/templates/pages/projects/index.html
+++ b/www/templates/pages/projects/index.html
@@ -25,7 +25,7 @@
 		        					<md-tooltip>
 		        						View/Edit
 		        					</md-tooltip>
-		          					<md-icon md-svg-src="img/icons/.svg"></md-icon>
+		          					<md-icon md-svg-src="img/icons/edit.svg"></md-icon>
 		        				</md-button>
 		        				<md-button aria-label="photo" class="md-icon-button">
 		          					<md-icon md-svg-src="img/icons/home.svg"></md-icon>
