we can close nodes.

--- a/www/templates/pages/project/project.html
+++ b/www/templates/pages/project/project.html
@@ -16,15 +16,9 @@
 	    <!-- Nested node template -->
 		<script type="text/ng-template" id="nodes_renderer.html">
 		  <div ui-tree-handle class="tree-node tree-node-content" layout = "row">
-		    <a class="btn btn-success btn-xs" ng-if="node.nodes && node.nodes.length > 0" data-nodrag ng-click="toggle(this)" ><span
-		        class="glyphicon"
-		        ng-class="{
-		          'glyphicon-chevron-right': collapsed,
-		          'glyphicon-chevron-down': !collapsed
-		        }"></span></a>
-		    <md-button class="md-icon-button" aria-label="Use Android" ng-if="node.nodes && node.nodes.length > 0" data-nodrag ng-click="toggle(this)" >
-          		<md-icon md-svg-src="../../../img/icons/close.svg" ng-show="collapsed"></md-icon>
-          		<md-icon md-svg-src="../../../img/icons/home.svg" ng-show="!collapsed"></md-icon>
+		    <md-button class="md-icon-button" aria-label="Use Android" ng-if="node.nodes && node.nodes.length > 0" data-nodrag ng-click="node.collapsed = !node.collapsed" >
+          		<md-icon md-svg-src="../../../img/icons/close.svg" ng-show="collapsed" data-nodrag></md-icon>
+          		<md-icon md-svg-src="../../../img/icons/home.svg" ng-show="!collapsed" data-nodrag></md-icon>
         	</md-button>
 		    <md-input-container class = "treeInput" flex>
 			  <label>Title</label>
@@ -41,7 +35,7 @@
           		<md-icon  md-svg-src="../../../img/icons/add.svg"></md-icon>
         	</md-button>
 		  </div>
-		  <ol ui-tree-nodes="" ng-model="node.nodes" ng-class="{hidden: collapsed}">
+		  <ol ui-tree-nodes="" ng-model="node.nodes" ng-show="!node.collapsed">
 		    <li ng-repeat="node in node.nodes" ui-tree-node ng-include="'nodes_renderer.html'">
 		    </li>
 		  </ol>
