--- a/www/templates/pages/projects/index.html
+++ b/www/templates/pages/projects/index.html
@@ -1,9 +1,15 @@
-<div ng-controller="projectsCtrl" layout="row">
+<div ng-controller="projectsCtrl" layout="row" flex>
 	<!-- <md-whiteframe class="md-whiteframe-z1" layout> -->
 	<span>
-		<md-card ng-repeat="project in projects">
+		<md-card ng-repeat="project in projects" flex>
+			<md-toolbar>
+			    <div class="md-toolbar-tools">
+			      <h2>{{project.name}}</h2>
+			    </div>
+			  </md-toolbar>
+			<br/>
 			<md-card-content class="md-padding"> 
-				<h3>{{project.name}}</h3> <p>{{project.description}}</p>
+				<p>{{project.description}}</p>
 			</md-card-content>
 			<md-fab-toolbar md-open="false" count="0" class="md-fab-toolbar md-right" style="height: 4.8rem">
 				<div class="md-fab-toolbar-wrapper">
