--- a/www/templates/pages/project/project.html
+++ b/www/templates/pages/project/project.html
@@ -26,7 +26,7 @@
 			</md-input-container>
 			<md-input-container class = "treeInput" flex ="10">
 			  <label>Qty</label>
-			  <input ng-model="node.qty">
+			  <input ng-model="node.qty" ng-blur="estimate(node)">
 			</md-input-container>
 		    <md-button class="md-icon-button" aria-label="Use Android" data-nodrag ng-click="remove(this)" >
           		<md-icon md-svg-src="../../../img/icons/close.svg"></md-icon>
