--- a/www/templates/pages/project/project.html
+++ b/www/templates/pages/project/project.html
@@ -32,7 +32,7 @@
 			</md-input-container>
 			<md-input-container class = "treeInput" flex ="10">
 			  <label>Qty</label>
-			  <input ng-model="node.qty">
+			  <input ng-model="node.qty" ng-blur="estimate(node)">
 			</md-input-container>
 		    <md-button class="md-icon-button" aria-label="Use Android" data-nodrag ng-click="undoToolTip(this,removeNode,newSubItem)" >
 		    	<md-tooltip>
