--- a/www/templates/pages/project/project.html
+++ b/www/templates/pages/project/project.html
@@ -23,8 +23,8 @@
 		        <md-tooltip ng-show="node.collapsed" >
 		          Expand
 		        </md-tooltip>
-          		<md-icon md-svg-src="../../../img/icons/down_arrow.svg" ng-show="node.collapsed" data-nodrag></md-icon>
-          		<md-icon md-svg-src="../../../img/icons/right_arrow.svg" ng-show="!node.collapsed" data-nodrag></md-icon>
+          		<md-icon md-svg-src="../../../img/icons/right_arrow.svg" ng-show="node.collapsed" data-nodrag></md-icon>
+          		<md-icon md-svg-src="../../../img/icons/down_arrow.svg" ng-show="!node.collapsed" data-nodrag></md-icon>
         	</md-button>
 		    <md-input-container class = "treeInput" flex>
 			  <label>Title</label>
