create project on the welcome page is now working

--- a/www/templates/pages/main/index.html
+++ b/www/templates/pages/main/index.html
@@ -18,7 +18,7 @@
 				</p>
 			</md-card-content>
 			<div class="md-actions" layout="row" layout-align="end center">
-				<md-button class="md-raised md-primary" >Create Project</md-button>
+				<md-button class="md-raised md-primary" ng-click="goTo('/createProject')">Create Project</md-button>
 				<md-button class="md-raised md-primary" >Create Estimation</md-button>
 			</div>
 		</md-content>
