fixed card heights

--- a/www/css/projects/projects.css
+++ b/www/css/projects/projects.css
@@ -20,3 +20,7 @@
   background: #ff8a80; }
 .gridListdemoBasicUsage md-grid-tile {
   transition: all 400ms ease-out 50ms; }
+
+.cardHeight {
+  height :100% !important;
+}
