Added a small bottom marin to the cards on the projects page

--- a/www/templates/pages/projects/index.html
+++ b/www/templates/pages/projects/index.html
@@ -19,7 +19,7 @@
 				</md-button>
 			  </md-toolbar>
 			<br/>
-			<md-card-content class="md-padding"> 
+			<md-card-content class="md-padding" class = "cardHeight"> 
 			<p>{{project.description}}</p>
 			<md-fab-toolbar md-open="false" count="0" class="md-fab-toolbar md-right">
 				<div class="md-fab-toolbar-wrapper">
