cards now have a small radius

--- a/www/css/projects/projects.css
+++ b/www/css/projects/projects.css
@@ -24,4 +24,9 @@
 .cardHeight {
   height :100% !important;
   margin-bottom: 10px;
+  border-radius: 5px;
+}
+
+.cardHeader {
+  border-radius: 5px 5px 0 0 !important;
 }
