--- a/www/templates/pages/projects/index.html
+++ b/www/templates/pages/projects/index.html
@@ -7,7 +7,7 @@
         md-gutter="10px" md-gutter-gt-sm="10px" >
     <md-grid-tile ng-repeat="project in projects" class="gray" md-rowspan="1" md-colspan="1" md-colspan-sm="1">
 		<md-card flex class = "cardHeight">
-			<md-toolbar layout = "row">
+			<md-toolbar layout = "row" class = "cardHeader">
 			    <div class="md-toolbar-tools">
 			      <h3>{{project.name}}</h3>
 			    </div>
