--- a/www/templates/pages/project/project.html
+++ b/www/templates/pages/project/project.html
@@ -15,6 +15,7 @@
 	    <div ui-tree>
 	    <!-- Nested node template -->
 		<script type="text/ng-template" id="nodes_renderer.html">
+
 		  <div ui-tree-handle class="tree-node tree-node-content" layout = "row">
 		    <md-button class="md-icon-button" aria-label="Use Android" ng-if="node.nodes && node.nodes.length > 0" data-nodrag ng-click="node.collapsed = !node.collapsed" >
 				<md-tooltip ng-show="!node.collapsed">
@@ -32,7 +33,8 @@
 			</md-input-container>
 			<md-input-container class = "treeInput" flex ="10">
 			  <label>Qty</label>
-			  <input ng-model="node.qty" ng-blur="estimate(node)">
+			  <!-- <input ng-model="node.estimations[userIndex]" ng-blur="estimate(node)"> -->
+			  <input ng-model="node.estimations[userIndex]">
 			</md-input-container>
 		    <md-button class="md-icon-button" aria-label="Use Android" data-nodrag ng-click="undoToolTip(this,removeNode,newSubItem)" >
 		    	<md-tooltip>
