--- a/www/templates/pages/main/index.html
+++ b/www/templates/pages/main/index.html
@@ -7,10 +7,7 @@
 		</md-toolbar>
 		<md-content class="md-padding">
 			<!--<img ng-src="../../../img/Swarm.gif" height="540" width="960" class="md-card-image" alt="Washed Out">-->
-			<video controls autoplay width="100%">
-				<source src="../../../img/Swarm.avi" type="video/avi" >
-				<img src="../../../img/Swarm.png" height="540" width="960">
-			</video>
+				<img src="../../../img/Swarm.jpg" height="auto" width="auto" class = "imageMain">
 			<md-card-content>
 				<h2 class="md-title">Estimate Swarm</h2>
 				<p>
