--- a/www/css/estimation/estimation.css
+++ b/www/css/estimation/estimation.css
@@ -30,3 +30,23 @@
 .chipsdemoContactChips .fixedRows {
   height: 250px;
   overflow: hidden; }
+
+.checkboxdemoSyncing .checkboxDemo1 div {
+  clear: both; }
+.checkboxdemoSyncing .checkboxDemo1 md-checkbox {
+  float: left; }
+.checkboxdemoSyncing legend {
+  color: #3F51B5; }
+.checkboxdemoSyncing legend code {
+  color: #3F51B5;
+  font-weight: normal; }
+.checkboxdemoSyncing p {
+  padding-left: 8px; }
+.checkboxdemoSyncing .info {
+  padding-left: 13px; }
+.checkboxdemoSyncing div.standard {
+  padding: 8px;
+  padding-left: 15px; }
+.checkboxdemoSyncing fieldset.standard {
+  border-style: solid;
+  border-width: 1px; }
